Listbox Pattern and Examples: Breakout  Examples to Separate Pages
For issue #123, made the following changes:

* renamed: examples/listbox/listbox.html -> examples/listbox/listbox-rearrangeable.html
* listbox-rearrangeable.html:
    - Change title, Remove example 3, add similar example link
    - add intro to keyboard and roles and props sections
    - update links to source files, update source rendering code.
* renamed:examples/listbox/js/main.js -> examples/listbox/js/listbox-rearrangeable.js
* listbox-rearrangeable.js: Remove example 3 code.
* new file:examples/listbox/listbox-scrollable.html
* new file:examples/listbox/js/listbox-scrollable.js
* modified aria-practices.html: Update links to example pages and ad ID listbox_kbd_interaction.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1583,10 +1583,13 @@
 
       <section class="notoc">
         <h4>Examples</h4>
-        <p><a href="examples/listbox/listbox.html">Listbox Examples:</a> Two examples of the listbox pattern demonstrating differences between single-select and multi-select implementation as well as the use of action buttons with key shortcuts for arranging items in a list.</p>
+        <ul>
+          <li><a href="examples/listbox/listbox-scrollable.html">Scrollable Listbox Example</a>: Single-select listbox that scrolls to reveal more options, similar to HTML <code>select</code> with <code>size</code> attribute greater than one.</li>
+          <li><a href="examples/listbox/listbox-rearrangeable.html">Example Listboxes with Rearrangeable Options</a>: Examples of both single-select and multi-select listboxes with accompanying toolbars where options can be added, moved, and removed.</li>
+        </ul>
       </section>
 
-      <section class="notoc">
+      <section id="listbox_kbd_interaction" class="notoc">
         <h4>Keyboard Interaction</h4>
         <p>For a vertically oriented listbox:</p>
         <ul>
