Scrollable Listbox Example: Remove Unnecessary List Markup from Keyboard Table
Per feedback from @annabbott in issue #469, modified examples/listbox/listbox-scrollable.html
to remove the list markup from the down arrow row in the keyboard table.

--- a/examples/listbox/listbox-scrollable.html
+++ b/examples/listbox/listbox-scrollable.html
@@ -111,11 +111,7 @@
       <tbody>
         <tr>
           <th><kbd>Down Arrow</kbd></th>
-          <td>
-            <ul>
-              <li>Moves focus to and selects the next option.</li>
-            </ul>
-          </td>
+          <td>Moves focus to and selects the next option.</td>
         </tr>
         <tr>
           <th><kbd>Up Arrow</kbd></th>
