--- a/examples/checkbox/checkbox-1/checkbox-1.html
+++ b/examples/checkbox/checkbox-1/checkbox-1.html
@@ -22,8 +22,7 @@
 
     <p>Similar examples include: </p>
     <ul>
-      <li><a href="../checkbox-2/checkbox-2.html">Checkbox (Mixed State)</a>: Mixed state checkbox controlling standard input checkboxes.</li>
-      <!--  list other examples that implement the same design pattern. -->
+      <li><a href="../checkbox-2/checkbox-2.html">Checkbox (Mixed-State)</a>: Mixed state checkbox controlling standard input checkboxes.</li>
     </ul>
 
     <section>
@@ -100,7 +99,7 @@
               <td><code>div</code></td>
               <td>
                 <ul>
-                  <li>Identifies the <code>div</code> element as a ARIA <code>checkbox</code>.</li>
+                  <li>Identifies the <code>div</code> element as a <code>checkbox</code>.</li>
                   <li>The child text content of this <code>div</code> provides the accessible name of the checkbox.</li>
                 </ul>
               </td>
@@ -117,7 +116,7 @@
               <td><code>div</code></td>
               <td>
                   <ul>
-                    <li>Identifies the <code>checkbox</code> button as unchecked.</li>
+                    <li>Indicates the <code>checkbox</code> is <strong>not</strong> checked.</li>
                     <li>CSS attribute selectors (e.g. <code>[aria-checked=&quot;false&quot;]</code>) are used to synchronize the visual states with the value of the <code>aria-checked</code> attribute.</li>
                     <li>To support operating system and browser high contrast settings, the CSS <code>::before</code> pseudo element and <code>content</code> property are used to generate the visual indicators of the checkbox state.</li>
                   </ul>
@@ -129,7 +128,7 @@
               <td><code>div</code></td>
               <td>
                   <ul>
-                    <li>Identifies the <code>checkbox</code> as checked.</li>
+                    <li>Indicates the <code>checkbox</code> is checked.</li>
                     <li>CSS attribute selectors (e.g. <code>[aria-checked=&quot;true&quot;]</code>) are used to synchronize the visual states with the value of the <code>aria-checked</code> attribute.</li>
                     <li>To support operating system and browser high contrast settings, the CSS <code>::before</code> pseudo element and <code>content</code> property are used to generate the visual indicators of the checkbox state.</li>
                   </ul>
