Styled buttons and toolbar in listbox example

--- a/examples/listbox/listbox-rearrangeable.html
+++ b/examples/listbox/listbox-rearrangeable.html
@@ -22,7 +22,7 @@
   <h1>Example Listboxes with Rearrangeable Options</h1>
   <p>
     <strong>NOTE:</strong> This example page is incomplete; it is not ready for final review.
-    Development is tracked by 
+    Development is tracked by
     <a href="https://github.com/w3c/aria-practices/issues/123">issue 123.</a>
   </p>
   <p>
@@ -59,7 +59,7 @@ while in the second example, they may select multiple options before activating 
               <li id="ss_opt9" role="option">Level of traffic noise</li>
               <li id="ss_opt10" role="option">Access to major highways</li>
             </ul>
-            <div role="toolbar" aria-label="Actions">
+            <div role="toolbar" aria-label="Actions" class="toolbar">
               <button id="ex1-up" class="toolbar-item selected" aria-keyshortcuts="Alt+ArrowUp" aria-disabled="true">Up</button>
               <button id="ex1-down" class="toolbar-item" tabindex="-1" aria-keyshortcuts="Alt+ArrowDown" aria-disabled="true">Down</button>
               <button id="ex1-delete" class="toolbar-item move-right-btn" tabindex="-1" aria-keyshortcuts="Alt+ArrowRight Delete" aria-disabled="true">Not Important</button>
@@ -202,8 +202,8 @@ while in the second example, they may select multiple options before activating 
   <section>
     <h2 id="kbd_label">Keyboard Support</h2>
     <p>
-      The example listboxes on this page implement the following keyboard interface. 
-      Other variations and options for the keyboard interface are described in the  
+      The example listboxes on this page implement the following keyboard interface.
+      Other variations and options for the keyboard interface are described in the
       <a href="../../#listbox_kbd_interaction">Keyboard Interaction section of the Listbox Design Pattern.</a>
     </p>
     <table aria-labelledby="kbd_label" class="def">
@@ -292,8 +292,8 @@ while in the second example, they may select multiple options before activating 
   <section>
     <h2 id="rps_label">Role, Property, State, and Tabindex  Attributes</h2>
     <p>
-      The example listboxes on this page implement the following ARIA roles, states, and properties. 
-      Information about other ways of applying ARIA roles, states, and properties is available in the    
+      The example listboxes on this page implement the following ARIA roles, states, and properties.
+      Information about other ways of applying ARIA roles, states, and properties is available in the
       <a href="../../#listbox_roles_states_props">Roles, States, and Properties section of the Listbox Design Pattern.</a>
     </p>
     <table aria-labelledby="rps_label" class="data attributes">
