--- a/examples/accordion/accordion.html
+++ b/examples/accordion/accordion.html
@@ -273,15 +273,15 @@
         <tr>
           <th scope="row"><code>button</code></th>
           <td></td>
-          <td><code>a</code></td>
+          <td><code>button</code></td>
           <td>
-            Identifies the element as a button inside the accordion header that provides hide/show functionality.
+            Button inside the accordion header that provides hide/show functionality.
           </td>
         </tr>
         <tr>
           <td> </td>
           <th scope="row"><code>aria-expanded=<q>true</q></code></th>
-          <td><code>a</code></td>
+          <td><code>button</code></td>
           <td>
             Set to <code>true</code> when the Accordion panel is expanded, otherwise set to <code>false</code>.
           </td>
@@ -289,7 +289,7 @@
         <tr>
           <td> </td>
           <th scope="row"><code>aria-controls=<q>ID</q></code></th>
-          <td><code>a</code></td>
+          <td><code>button</code></td>
           <td>
             Points to the ID of the panel which the header controls.
           </td>
@@ -297,7 +297,7 @@
         <tr>
           <td> </td>
           <th scope="row"><code>aria-disabled=<q>true</q></code></th>
-          <td><code>a</code></td>
+          <td><code>button</code></td>
           <td>
             If the accordion panel is expanded and is not allowed to be collapsed, then set to <code>true</code>.
           </td>
