--- a/examples/menu-button/menu-button-actions.html
+++ b/examples/menu-button/menu-button-actions.html
@@ -40,15 +40,13 @@
         <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>
         <div id="ex1">
           <div class="menu_button">
-            <div
+            <button
                 id="menubutton1"
                 aria-haspopup="true"
                 aria-controls="menu1"
-                role="button"
-                tabindex="0"
                 >
               Actions
-            </div>
+            </button>
 
             <ul id="menu1" role="menu" aria-labelledby="menubutton1">
               <li role="menuitem">Action 1</li>
