Layout and Advanced Data Grid Examples: Add similar example links
For issues #105 and #155, modified:
* examples/grid/LayoutGrids.html
* examples/grid/advancedDataGrid.html

Add links to the other example pages to the intro.

--- a/examples/grid/LayoutGrids.html
+++ b/examples/grid/LayoutGrids.html
@@ -42,6 +42,11 @@
     Thus, a link contained inside of a grid cell is presented to a screen reader as a link.
     By contrast, a link inside of a menu is presented as a menuitem, and a link inside of a listbox is presented as an option.
   </p>
+  <p Similar examples include:</p>
+  <ul>
+    <li><a href="dataGrids.html">Data Grid Examples</a>: Three example implementations of grid that include features relevant to presenting tabular information, such as content editing, sort, and column hiding.</li>
+    <li><a href="advancedDataGrid.html">Advanced Data Grid Example</a>: Example of a grid with behaviors and features similar to a typical spreadsheet, including cell and row selection.</li>
+  </ul>
   <section>
     <h2>Examples</h2>
     <section>
