Update keyboard shortcuts for listbox

--- a/examples/listbox/listbox-rearrangeable.html
+++ b/examples/listbox/listbox-rearrangeable.html
@@ -22,7 +22,7 @@
   <h1>Example Listboxes with Rearrangeable Options</h1>
   <p>
     <strong>NOTE:</strong> This example page is incomplete; it is not ready for final review.
-    Development is tracked by 
+    Development is tracked by
     <a href="https://github.com/w3c/aria-practices/issues/123">issue 123.</a>
   </p>
   <p>
@@ -69,7 +69,7 @@ while in the second example, they may select multiple options before activating 
             <span id="ss_unimp_l">Unimportant Features:</span>
             <ul id="ss_unimp_list" tabindex="0" role="listbox" aria-labelledby="ss_unimp_l" aria-activedescendant="">
             </ul>
-            <button id="ex1-add" class="move-left-btn" aria-keyshortcuts="Alt+ArrowLeft Delete" aria-disabled="true">Important</button>
+            <button id="ex1-add" class="move-left-btn" aria-keyshortcuts="Alt+ArrowLeft Enter" aria-disabled="true">Important</button>
           </div>
         </div>
       </div>
@@ -122,7 +122,7 @@ while in the second example, they may select multiple options before activating 
               <li id="ms_opt9" role="option" aria-selected="false">Advanced waste recycling system</li>
               <li id="ms_opt10" role="option" aria-selected="false">Turbo vertical take-off capability</li>
             </ul>
-            <button id="ex2-add" class="move-right-btn" aria-keyshortcuts="Alt+ArrowRight Delete" aria-disabled="true">Add</button>
+            <button id="ex2-add" class="move-right-btn" aria-keyshortcuts="Alt+ArrowRight Enter" aria-disabled="true">Add</button>
           </div>
           <div class="right-area">
             <span id="ms_ch_l">Upgrades you have chosen:</span>
@@ -202,8 +202,8 @@ while in the second example, they may select multiple options before activating 
   <section>
     <h2 id="kbd_label">Keyboard Support</h2>
     <p>
-      The example listboxes on this page implement the following keyboard interface. 
-      Other variations and options for the keyboard interface are described in the  
+      The example listboxes on this page implement the following keyboard interface.
+      Other variations and options for the keyboard interface are described in the
       <a href="../../#listbox_kbd_interaction">Keyboard Interaction section of the Listbox Design Pattern.</a>
     </p>
     <table aria-labelledby="kbd_label" class="def">
@@ -292,8 +292,8 @@ while in the second example, they may select multiple options before activating 
   <section>
     <h2 id="rps_label">Role, Property, State, and Tabindex  Attributes</h2>
     <p>
-      The example listboxes on this page implement the following ARIA roles, states, and properties. 
-      Information about other ways of applying ARIA roles, states, and properties is available in the    
+      The example listboxes on this page implement the following ARIA roles, states, and properties.
+      Information about other ways of applying ARIA roles, states, and properties is available in the
       <a href="../../#listbox_roles_states_props">Roles, States, and Properties section of the Listbox Design Pattern.</a>
     </p>
     <table aria-labelledby="rps_label" class="data attributes">
