--- a/aria-practices.html
+++ b/aria-practices.html
@@ -86,7 +86,7 @@
       <p>
         Functionally, ARIA roles, states, and properties are sort of like CSS for assistive technologies. 
         In the case of screen readers, ARIA controls the rendering of the non-visual experience. 
-        Incorrect ARIA misrepresents the visual experience, with potentially devastating effects on non-visual experiences.
+        Incorrect ARIA misrepresents visual experiences, with potentially devastating effects on the corresponding non-visual experiences.
       </p>
       <p>Before using ARIA or any of the guidance in this document, please take time to understand the following two essential principles.</p>
       <h4>Principal 1: A role is a promise</h4>
@@ -102,10 +102,10 @@
       <p>One of the objectives of this guide is to define expected behaviors for each ARIA role.</p>
       <h4>Principle 2: ARIA Can Both Cloak and Enhance, Creating Both Power and Danger</h4>
       <p>
-        From the perspective of assistive technologies, ARIA gives authors the ability to dress up HTML and SVG elements to describe critical aspects of meaning and purpose that assistive technologies would not otherwise be able to reliably derive. 
         The information assistive technologies need about the meaning and purpose of user interface elements is called accessibility semantics.
+        From the perspective of assistive technologies, ARIA gives authors the ability to dress up HTML and SVG elements with critical accessibility semantics that the assistive technologies would not otherwise be able to reliably derive.
       </p>
-      <p>Some of ARIA is like a dress or cloak; it covers up, or overrides, the original semantics or content.</p>
+      <p>Some of ARIA is like a cloak; it covers up, or overrides, the original semantics or content.</p>
       <pre><code>
         &lt;a role=&quot;menuitem&quot;&gt;Assistive tech users perceive this element as an item in a menu, not a link.&lt;/a&gt;
         &lt;a aria-label=&quot;Assistive tech users perceive this aria-label, not the link text&quot;&gt;Link Text&lt;/a&gt;
@@ -143,8 +143,8 @@
       <h3>Browser and Assistive Technology Support</h3>
       <p>
         This guide illustrates appropriate use of ARIA 1.1 as defined in the ARIA specification. 
-        The design patterns, reference examples, and sample code intentionally <strong>do not</strong> implement code that fixes problems caused by gaps in support for ARIA 1.1 in browsers or assistive technologies.
-        This approach enables both browser and assistive technology developers to utilize code in the guide as references for test cases to assess the quality of their support for ARIA 1.1.
+        The design patterns, reference examples, and sample code intentionally <strong>do not</strong> implement code to fix problems that are caused by gaps in support for ARIA 1.1 in browsers or assistive technologies.
+        Browser and assistive technology developers can thus utilize code in this guide to help assess the quality of their support for ARIA 1.1.
       </p>
       <p>
         Similarly, JavaScript and CSS in this guide is written to be compatible with the most recent version of Chrome, Firefox, Internet Explorer, and Safari at the time of writing. 
@@ -152,7 +152,7 @@
       </p>
       <p>
         In other words, except in cases where the ARIA Working Group and other contributors have overlooked an error, 
-        examples that do not function well in a particular browser or with a specific assistive technology are demonstrating a lack of ARIA support and can be referenced in a bug report to its developer.
+        examples in this guide that do not function well in a particular browser or with a specific assistive technology are demonstrating browser or assistive technology bugs.
       </p>
     </section>
     <section id="mobile_and_touch_support">
