Read Me First section: Add link to review issue.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -81,6 +81,11 @@
 
   <section id="read_me_first">
     <h2>Read Me First</h2>
+    <p>
+      <strong>NOTE:</strong> This is a proposed draft of a new section.
+      Please provide feedback in issue 
+      <a href="https://github.com/w3c/aria-practices/issues/482">issue 482</a>.
+    </p>
     <section id="no_aria_better_bad_aria">
       <h3>No ARIA is better than Bad ARIA</h3>
       <p>
