--- a/aria-practices.html
+++ b/aria-practices.html
@@ -83,7 +83,7 @@
     <h2>Read Me First</h2>
     <p>
       <strong>NOTE:</strong> This is a proposed draft of a new section.
-      Please provide feedback in issue 
+      Please provide feedback in 
       <a href="https://github.com/w3c/aria-practices/issues/482">issue 482</a>.
     </p>
     <section id="no_aria_better_bad_aria">
